--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,1 +1,60 @@
 @import "_null";
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Montserrat:wght@400;600;700&display=swap');
+
+
+/*-----------------------Constant---------------------*/
+$Backgroung-color: #C0D8DE;
+$Background-title: #242424;
+$Background-body: #E4E6E7;
+$Font-calibri: 'Fira Sans', sans-serif;
+$Font-montserrat: 'Montserrat', sans-serif;
+
+/*-----------------------Blocks------------------------*/
+body {
+    color: #000;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    background: linear-gradient(180deg, rgba(3, 56, 244, 0.71) 0%, rgba(224, 37, 206, 0.79) 100%);
+
+}
+
+.wrapper {
+    min-height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 1 auto;
+}
+
+[class*="__container"] {
+    max-width: 1260px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
+
+.main__body {
+    display: flex;
+    gap: 10px;
+    margin-top: 15px;
+}
+
+.sidebar {
+    display: flex;
+    flex-direction: column;
+    flex: 50%;
+    background-color: rgba(196, 196, 196, 0.3);
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    flex: 50%;
+    background-color: #fff;
+}
+
+/*-------------------------------Header--------------------*/
