--- a/scss/style.scss
+++ b/scss/style.scss
@@ -57,4 +57,84 @@ main {
     background-color: #fff;
 }
 
+.sidebar__container {
+    max-width: 450px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
 /*-------------------------------Header--------------------*/
+
+.sidebar__header {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.sidebar__avatar {}
+
+.sidebar__img {
+    width: 150px;
+    border-radius: 50%;
+}
+
+.sidebar__text-content {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.sidebar__title {
+    font-family: $Font-montserrat;
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 43px;
+    color: #FFFFFF;
+}
+
+.sidebar__subtitle {
+    font-family: $Font-montserrat;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 18px;
+    color: #CECACA;
+}
+
+/*-----------------------------------Contact----------------------*/
+.sidebar__contact {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    gap: 15px;
+}
+
+.contact {
+    display: flex;
+    gap: 40px;
+    padding: 10px 0 10px 25px;
+    border-radius: 10px;
+    background-color: rgba(196, 196, 196, 0.35);
+    align-items: center;
+}
+
+
+.contact__img {
+    width: 25px;
+    height: 25px;
+}
+
+.contact__item {
+    font-family: $Font-calibri;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 18px;
+    color: #FFFFFF;
+    transition: all 0.3s ease 0s;
+
+    &:hover {
+        color: rgba(74, 50, 232, 1)
+    }
+}
+
+/*------------------------------------------*/
