added adaptive for all blocks

--- a/css/style.css
+++ b/css/style.css
@@ -219,8 +219,8 @@ main {
   color: #CECACA;
 }
 
-/*-----------------------------------Contact----------------------*/
-.sidebar__contact {
+/*-----------------------------------Content----------------------*/
+.sidebar__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -232,7 +232,7 @@ main {
   gap: 15px;
 }
 
-.contact {
+.content-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -245,12 +245,12 @@ main {
           align-items: center;
 }
 
-.contact__img {
+.content__img {
   width: 25px;
   height: 25px;
 }
 
-.contact__item {
+.content__item {
   font-family: "Fira Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -261,7 +261,7 @@ main {
   transition: all 0.3s ease 0s;
 }
 
-.contact__item:hover {
+.content__item:hover {
   color: #4a32e8;
 }
 
@@ -444,4 +444,79 @@ main {
 
 .skills-block__link:not(:last-child) {
   margin-bottom: 10px;
+}
+
+/*------------------------Media--------------------------*/
+@media (max-width: 956px) {
+  .main__body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 50px;
+  }
+}
+
+@media (max-width: 545px) {
+  .content__item {
+    font-size: 18px;
+  }
+  .sidebar__img {
+    width: 110px;
+  }
+  .sidebar__title {
+    font-size: 28px;
+  }
+  .skills-block__link {
+    font-size: 16px;
+  }
+  .content__container {
+    max-width: 330px;
+  }
+}
+
+@media (max-width: 430px) {
+  .content__container {
+    max-width: 290px;
+  }
+  .info-block-line {
+    display: none;
+  }
+  .info-block__subtitle {
+    font-size: 15px;
+  }
+  .sidebar__container {
+    max-width: 290px;
+  }
+  .sidebar__content-block {
+    gap: 20px;
+  }
+  .sidebar__content-block a {
+    font-size: 15px;
+  }
+  .sidebar__subtitle {
+    font-size: 15px;
+  }
+  .sidebar__title {
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+
+@media (max-width: 375px) {
+  .content__container {
+    max-width: 230px;
+  }
+  .sidebar__avatar {
+    display: none;
+  }
+  .sidebar__container {
+    max-width: 230px;
+  }
+  .content-block {
+    padding-left: 10px;
+  }
+  .content-block a {
+    font-size: 12px;
+  }
 }
